argocd/manifests/prometheus-server/service.yaml
---
# Service for the custom Prometheus server (read UI and remote write API).
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: couchbase
  labels:
    app: prometheus-server
spec:
  type: ClusterIP
  selector:
    app: prometheus-server
  ports:
    - name: web
      port: 9090
      targetPort: web
      protocol: TCP
